crates/core/tests/snapshots/corpus__高知大学課外活動体育施設使用規則@高知大学課外活動体育施設使用規則.pdf.snap
---
source: crates/core/tests/corpus.rs
expression: doc
input_file: sources/高知大学課外活動体育施設使用規則.pdf
---
{
  "title": "高知大学課外活動体育施設使用規則",
  "enacted": {
    "date": {
      "era": "heisei",
      "year": 16,
      "month": 4,
      "day": 1,
      "iso": "2004-04-01"
    },
    "rule_number": {
      "number": 157,
      "year": null,
      "raw": "規則第157号"
    },
    "raw": "平成16年４月１日 規則第157号"
  },
  "last_amended": {
    "date": {
      "era": "reiwa",
      "year": 3,
      "month": 9,
      "day": 10,
      "iso": "2021-09-10"
    },
    "rule_number": {
      "number": 20,
      "year": null,
      "raw": "規則第20号"
    },
    "raw": "最終改正 令和３年９月10日規則第20号"
  },
  "full_amendment_note": null,
  "body": [
    {
      "type": "article",
      "number": {
        "main": 1,
        "branch": null
      },
      "title": "趣旨",
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則は、高知大学課外活動施設管理運営規則第４条の規定に基づき、高知大学課外活動体育施設（以下「施設」という。）の使用に関し必要な事項を定める。",
          "items": [],
          "refs": []
        }
      ],
      "subordinate_rules": []
    },
    {
      "type": "article",
      "number": {
        "main": 2,
        "branch": null
      },
      "title": "使用目的",
      "paragraphs": [
        {
          "number": 1,
          "text": "施設は、本学の授業及び行事に使用するほか、次に掲げる目的に使用することができる。",
          "items": [
            {
              "number": 1,
              "text": "学生の課外活動",
              "subitems": [],
              "refs": []
            },
            {
              "number": 2,
              "text": "その他学長が認めたもの",
              "subitems": [],
              "refs": []
            }
          ],
          "refs": []
        }
      ],
      "subordinate_rules": []
    },
    {
      "type": "article",
      "number": {
        "main": 3,
        "branch": null
      },
      "title": "使用者の範囲",
      "paragraphs": [
        {
          "number": 1,
          "text": "施設を使用できる者は、次の各号に掲げる者とする。",
          "items": [
            {
              "number": 1,
              "text": "本学学生",
              "subitems": [],
              "refs": []
            },
            {
              "number": 2,
              "text": "その他学長が許可した者",
              "subitems": [],
              "refs": []
            }
          ],
          "refs": []
        }
      ],
      "subordinate_rules": []
    },
    {
      "type": "article",
      "number": {
        "main": 4,
        "branch": null
      },
      "title": "使用日時",
      "paragraphs": [
        {
          "number": 1,
          "text": "施設の使用日時は、次の各号に掲げるとおりとする。ただし、学長が必要があると認めたときは、年末年始を除き、使用を許可することがある。",
          "items": [
            {
              "number": 1,
              "text": "使用できる日日曜日、国民の祝日に関する法律（昭和23年法律第178号）に規定する休日及び年末年始（12月28日から翌年１月４日まで）を除く日",
              "subitems": [],
              "refs": []
            },
            {
              "number": 2,
              "text": "使用できる時間午前８時30分から午後９時まで",
              "subitems": [],
              "refs": []
            }
          ],
          "refs": []
        }
      ],
      "subordinate_rules": []
    },
    {
      "type": "article",
      "number": {
        "main": 5,
        "branch": null
      },
      "title": "使用手続",
      "paragraphs": [
        {
          "number": 1,
          "text": "施設を第２条各号の目的に使用する場合は、原則として使用開始日の７日前までに所定の様式による施設使用願を学務部学生支援課に提出し、学長の許可を受けなければならない。",
          "items": [],
          "refs": []
        },
        {
          "number": 2,
          "text": "高知大学学生準則第14条の規定により認められた学生の団体が課外活動として施設を使用する場合は、学期の始めに所定の様式による施設使用計画書を学務部学生支援課に提出し、学長の許可を受けなければならない。",
          "items": [],
          "refs": []
        }
      ],
      "subordinate_rules": []
    },
    {
      "type": "article",
      "number": {
        "main": 6,
        "branch": null
      },
      "title": "遵守事項",
      "paragraphs": [
        {
          "number": 1,
          "text": "施設を使用する者は、次の事項を遵守しなければならない。",
          "items": [
            {
              "number": 1,
              "text": "使用目的以外の用途に使用しないこと。",
              "subitems": [],
              "refs": []
            },
            {
              "number": 2,
              "text": "使用時間を守ること。",
              "subitems": [],
              "refs": []
            },
            {
              "number": 3,
              "text": "火災及び盗難防止に留意すること。",
              "subitems": [],
              "refs": []
            },
            {
              "number": 4,
              "text": "体育施設内においては、喫煙をしないこと。",
              "subitems": [],
              "refs": []
            },
            {
              "number": 5,
              "text": "施設、設備、備品等を無断で改廃、新設、移動しないこと。",
              "subitems": [],
              "refs": []
            },
            {
              "number": 6,
              "text": "使用中止のときは、速やかに届け出ること。",
              "subitems": [],
              "refs": []
            },
            {
              "number": 7,
              "text": "使用後は清掃のうえ原状に復し、施錠すべき箇所は施錠し、鍵を学務部学生支援課に返還すること。",
              "subitems": [],
              "refs": []
            },
            {
              "number": 8,
              "text": "その他管理事務担当者の指示に従うこと。",
              "subitems": [],
              "refs": []
            }
          ],
          "refs": []
        }
      ],
      "subordinate_rules": []
    },
    {
      "type": "article",
      "number": {
        "main": 7,
        "branch": null
      },
      "title": "許可の取消し",
      "paragraphs": [
        {
          "number": 1,
          "text": "次の各号に該当する場合は、使用許可を取り消し、又は以後の使用を許可しないことがある。",
          "items": [
            {
              "number": 1,
              "text": "本学の行事等のため、施設を使用する必要が生じた場合",
              "subitems": [],
              "refs": []
            },
            {
              "number": 2,
              "text": "この規則及びこの規則に基づき定められた事項に違反した場合",
              "subitems": [],
              "refs": []
            }
          ],
          "refs": []
        }
      ],
      "subordinate_rules": []
    },
    {
      "type": "article",
      "number": {
        "main": 8,
        "branch": null
      },
      "title": "損害賠償",
      "paragraphs": [
        {
          "number": 1,
          "text": "使用した者が、故意又は過失により施設、設備、備品等を破損し、又は滅失した場合は、その損害を賠償しなければならない。",
          "items": [],
          "refs": []
        }
      ],
      "subordinate_rules": []
    },
    {
      "type": "article",
      "number": {
        "main": 9,
        "branch": null
      },
      "title": "その他",
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則に定めるもののほか、施設使用に関し必要な事項は、学長が定める。",
          "items": [],
          "refs": []
        }
      ],
      "subordinate_rules": []
    }
  ],
  "supplementary_provisions": [
    {
      "ordinal": 1,
      "heading_raw": "附   則",
      "amendment": null,
      "promulgated": null,
      "effective": {
        "kind": "date",
        "era": "heisei",
        "year": 16,
        "month": 4,
        "day": 1,
        "iso": "2004-04-01"
      },
      "text": "この規則は、平成16年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 2,
      "heading_raw": "附 則（平成17年７月１日規則第545号）",
      "amendment": {
        "number": 545,
        "year": null,
        "raw": "規則第545号"
      },
      "promulgated": {
        "era": "heisei",
        "year": 17,
        "month": 7,
        "day": 1,
        "iso": "2005-07-01"
      },
      "effective": {
        "kind": "date",
        "era": "heisei",
        "year": 17,
        "month": 7,
        "day": 1,
        "iso": "2005-07-01"
      },
      "text": "この規則は、平成17年７月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 3,
      "heading_raw": "附 則（平成31年４月26日規則第15号）",
      "amendment": {
        "number": 15,
        "year": null,
        "raw": "規則第15号"
      },
      "promulgated": {
        "era": "heisei",
        "year": 31,
        "month": 4,
        "day": 26,
        "iso": "2019-04-26"
      },
      "effective": {
        "kind": "date",
        "era": "reiwa",
        "year": 1,
        "month": 5,
        "day": 1,
        "iso": "2019-05-01"
      },
      "text": "この規則は、令和元年５月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 4,
      "heading_raw": "附 則（令和３年９月10日規則第20号）",
      "amendment": {
        "number": 20,
        "year": null,
        "raw": "規則第20号"
      },
      "promulgated": {
        "era": "reiwa",
        "year": 3,
        "month": 9,
        "day": 10,
        "iso": "2021-09-10"
      },
      "effective": {
        "kind": "date",
        "era": "reiwa",
        "year": 3,
        "month": 10,
        "day": 1,
        "iso": "2021-10-01"
      },
      "text": "この規則は、令和３年10月１日から施行する。",
      "references_tables": []
    }
  ],
  "appendices": [],
  "authorities": []
}
